Sun Nov 10 08:19:21 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/IIOP_Connector.cpp:
	* tao/Connection_Handler.cpp:
	* tao/IIOP_Connection_Handler.cpp: Some debugging statements were
	  either out of format or totally useless for any debugging
	  purposes. Fixed some of them that I saw in the path that
	  actually hinders my debugging.

Sat Nov 09 09:47:37 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* orbsvcs/orbsvcs/RTEventLog.dsp: The release build was not
	  generating a different name from the debug build without
	  following our naming convention.

Fri Nov 08 19:18:58 2002  Irfan Pyarali  <irfan@oomworks.com>

	* orbsvcs/tests/Notify/Basic:

	  - Renamed the following file to make consistent:

	    - AdminProperties_Test.* to AdminProperties.*
	    - Events_Test.* to Events.*
	    - LifeCycleTest.* to LifeCycle.*

	  - Updated the following files to reflect the above described
	    name changes:

	    - Basic/Basic.dsw
	    - Basic/Basic.mpc
	    - Makefile
	    - Makefile.bor
	    - README

	  - Added run_test.pl so that these tests can be run in the
	    nightly built.

	* orbsvcs/tests/Notify/performance-tests/RedGreen: Added
	  run_test.pl so that these tests can be run in the nightly built.

	* orbsvcs/tests/Notify:

	  Updated the following project files so that they can be included
	  in the mega Notify test workspace:

	  orbsvcs/tests/Notify/Notify_Tests.dsw

	  - Basic/ConnectDisconnect.dsp
	  - Basic/IdAssignment.dsp
	  - Basic/Simple.dsp
	  - Basic/Updates.dsp
	  - Blocking/Structured_Consumer.dsp
	  - Blocking/Structured_Supplier.dsp
	  - Discarding/Sequence_Consumer.dsp
	  - Discarding/Sequence_Supplier.dsp
	  - Discarding/Structured_Consumer.dsp
	  - Discarding/Structured_Supplier.dsp
	  - MT_Dispatching/Structured_Consumer.dsp
	  - MT_Dispatching/Structured_Supplier.dsp
	  - Ordering/Sequence_Consumer.dsp
	  - Ordering/Sequence_Supplier.dsp
	  - Ordering/Structured_Consumer.dsp