@@ -1,3 +1,11 @@
+Sun Nov 10 18:02:51 UTC 2002  Don Hinton  <dhinton@ieee.org>
+
+	* TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp: Fixed a problem
+	  with previous patch, Wed Oct 16 17:16:38 2002  Jeff Parsons
+	  <parsons@isis-server.isis.vanderbilt.edu>, where the logic was
+	  reversed.  Thanks to Jon Franklin for noticing the problem and
+	  providing the patch.
+
 Sun Nov 10 08:19:21 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tao/IIOP_Connector.cpp:
